[package]
name = "otc-wasm"
version = "0.1.2"
authors = ["j0nl1 <jonlitech@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.5.1"
cosmwasm-schema = "1.5.1"
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
thiserror = "1.0.56"
cw2 = "1.1.2"
cw-storage-macro = "1.2.0"
cw-denom = "2.3.0"
